--- a/OCR/OCR_Dev.ipynb
+++ b/OCR/OCR_Dev.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inputword(index,sub_index,OCRdata):\n",
+    "def inputword_image(index,sub_index,OCRdata):\n",
     "    if sub_index is not -1:            \n",
     "\n",
     "        print(word,\"의 검색위치:\", index+sub_index)\n",
@@ -82,7 +82,7 @@
     "        sub_index = OCRdata[+index:].find(word)\n",
     "        print('\\n')\n",
     "\n",
-    "        inputword(index,sub_index,OCRdata)    #recursive function\n"
+    "        inputword_image(index,sub_index,OCRdata)    #recursive function\n"
    ]
   },
   {
@@ -117,95 +117,6 @@
    "outputs": [],
    "source": [
     "#위의 내용은 pdf선택하는 것으로 함수와 시켜야함 "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2안 PDF->OCR ver 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('C:/Program Files/Anaconda3/Lib/site-packages')\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk.corpus import stopwords\n",
-    "# nltk.download() # 영어 corpora download 1번만 실행 \n",
-    "import re\n",
-    "import PyPDF2 # pdfminer는 버전관리와 오류가 많아서 PyPDF2 선택 \n",
-    "pdfFileObject = open('C:/Users/mando/Desktop/coin.pdf', 'rb')\n",
-    "\n",
-    "# pdf page\n",
-    "pdfReader = PyPDF2.PdfFileReader(pdfFileObject)\n",
-    "count = pdfReader.numPages\n",
-    "bin_page=\"\"\n",
-    "page_dict={}\n",
-    "\n",
-    "for i in range(count):  # OCRdata를 딕셔너리로 해서 page 저장 \n",
-    "    page = pdfReader.getPage(i)\n",
-    "    OCRdata=page.extractText().splitlines() # 줄로 안끊고 한 문장으로 읽기\n",
-    "    OCRdata=\"\".join(str(x) for x in OCRdata)# list to string\n",
-    "    page_dict[i] ={OCRdata,len(OCRdata)} # to find page\n",
-    "    bin_page+=OCRdata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "word='node'\n",
-    "leng=len(word)\n",
-    "if word is not \"\":\n",
-    "    index=0\n",
-    "    sub_index = bin_page[+index:].find(word)  #찾은 위치만큼 검색시작위치 더해주기 \n",
-    "    def inputword(index,sub_index):\n",
-    "        if sub_index is not -1:            \n",
-    "\n",
-    "            print(word,\"의 검색위치:\", index+sub_index)\n",
-    "            print(\"검색 결과:\",bin_page[index+sub_index:index+sub_index+len(word)]\n",
-    "                      , \"\", bin_page[index+sub_index+len(word):index+sub_index+len(word)+20],\"\\n\")\n",
-    "            index+=sub_index+leng                # 중복검색을 피하기 위해 단어 뒤 지점을 새로운 시작지점으로 설정                     \n",
-    "            sub_index = bin_page[+index:].find(word)\n",
-    "            print('\\n')\n",
-    "            \n",
-    "            inputword(index,sub_index)    #recursive function\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "node 의 검색위치: 2119\n",
-      "검색 결과: nodes to create a un\n",
-      "\n",
-      "\n",
-      "node 의 검색위치: 9112\n",
-      "검색 결과: node are all related\n",
-      "\n",
-      "\n",
-      "node 의 검색위치: 13363\n",
-      "검색 결과: node from which furt\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "inputword(index,sub_index)"
    ]
   },
   {
