--- a/OCR/OCR_Dev.ipynb
+++ b/OCR/OCR_Dev.ipynb
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "차종을 입력하세요다 음\n",
+      "차종을 입력하세요: 다 음\n",
       "다 음 의 검색위치: 0\n",
       "검색 결과: 다 음   사용법Google Search I' \n",
       "\n",
@@ -106,7 +106,7 @@
    "source": [
     "img=Image.open('C:/Users/mando/Desktop/test.jpg')\n",
     "OCRWrite(img)\n",
-    "word = input(\"차종을 입력하세요\")\n",
+    "word = input(\"차종을 입력하세요: \")\n",
     "OCWread(word)"
    ]
   },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,15 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "차종을 입력하세요\n",
-      "다시 입력하세요\n"
+      "차종을 입력하세요: node\n",
+      "3 page\n",
+      "node 의 검색위치: 164\n",
+      "검색 결과: node  s to create a univer \n",
+      "\n",
+      "7 page\n",
+      "node 의 검색위치: 826\n",
+      "검색 결과: node   are all related to  \n",
+      "\n",
+      "9 page\n",
+      "node 의 검색위치: 1671\n",
+      "검색 결과: node   from which further  \n",
+      "\n"
      ]
     }
    ],
@@ -191,7 +202,7 @@
     "\n",
     "# get number of pages\n",
     "NumPages = object.getNumPages()\n",
-    "word = input(\"차종을 입력하세요\")\n",
+    "word = input(\"차종을 입력하세요: \")\n",
     "\n",
     "Inputword(word,NumPages)"
    ]
