--- a/OCR/OCR_Dev.ipynb
+++ b/OCR/OCR_Dev.ipynb
@@ -63,7 +63,7 @@
     "    if word is not \"\":\n",
     "        index=0\n",
     "        sub_index = OCRdata[+index:].find(word)  #찾은 위치만큼 검색시작위치 더해주기 \n",
-    "        inputword(index,sub_index,OCRdata)"
+    "        inputword_image(index,sub_index,OCRdata)"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  PDF->OCR (make class) ver 2"
+    "# 2안  PDF->OCR (make class) ver 2"
    ]
   },
   {
